--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Hardkoded en Español
-subtitle: Random thoughts about .NET and coding in general
+subtitle: Otro blog sobre desarrollo de software
 use-site-title: true
 ---
 
